<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:background="@color/white"
    android:elevation="10dp"
    android:clickable="true"
    android:visibility="visible">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/dialogBg"
        android:visibility="visible">

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/colorAccent" />

        <Button
            android:id="@+id/btnDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/d_small"
            android:layout_marginTop="@dimen/d_small"
            android:text="@string/done" />

        <Button
            android:id="@+id/btnReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/d_small"
            android:layout_marginTop="@dimen/d_small"
            android:layout_toLeftOf="@id/btnDone"
            android:text="@string/reset" />

        <TextView
            android:id="@+id/tvSelectYears"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnDone"
            android:layout_marginLeft="@dimen/d_small"
            android:layout_marginTop="@dimen/d_small"
            android:text="@string/select_year_range"
            android:textColor="@color/textGrey"
            android:textSize="@dimen/text_large" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvSelectYears"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="@dimen/d_small">

            <TextView
                android:id="@+id/tvFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/d_small"
                android:text="@string/from"
                android:textColor="@color/textGrey"
                android:textSize="@dimen/text_normal" />

            <NumberPicker
                android:id="@+id/numberPicker1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/d_small"
                android:text="@string/to"
                android:textColor="@color/textGrey"
                android:textSize="@dimen/text_normal" />

            <NumberPicker
                android:id="@+id/numberPicker2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>